Fixed the spacing in recaps page

--- a/SWOD/SWOD/static/styles.css
+++ b/SWOD/SWOD/static/styles.css
@@ -754,7 +754,7 @@ input:-webkit-autofill {
     margin-top: 20px;
     display: flex;
     /*justify-content: center;*/
-    margin-left: 300px;
+    margin-left: 220px;
     margin-top:50px;
     gap: 20px;
 }
